Update class names with BEM Methodology

--- a/sections/cards.liquid
+++ b/sections/cards.liquid
@@ -1,20 +1,17 @@
 <div class="section-container">
-    <div class="section-title">Offers</div>
+  <div class="section-container__title">Offers</div>
 </div>
 
-</div>
 {% for block in section.blocks %}
   <div class="card-section">
-    <a href="{{ block.settings.card_link }}" class="card-link">
-      <div class="card">
+    <a href="{{ block.settings.card_link }}" class="card-section__link">
+      <div class="card-section__card">
         {% if block.settings.card_image != blank %}
-          {{
-            block.settings.card_image | image_url: width: 300, height: 300
-           }}
-          {% endif %}
-        <h3>{{ block.settings.card_title }}</h3>
-        <p>{{ block.settings.card_details }}</p>
-        <a href="{{ block.settings.card_link }}" class="btn">{{ block.settings.card_button_text }}</a>
+          {{ block.settings.card_image | image_url: width: 300, height: 300 }}
+        {% endif %}
+        <h3 class="card-section__card-title">{{ block.settings.card_title }}</h3>
+        <p class="card-section__card-details">{{ block.settings.card_details }}</p>
+        <a href="{{ block.settings.card_link }}" class="card-section__btn">{{ block.settings.card_button_text }}</a>
       </div>
     </a>
   </div>
