added dev_header in theme.liquid

--- a/sections/dev_header.liquid
+++ b/sections/dev_header.liquid
@@ -1,4 +1,4 @@
-<!-- dev_navbar.liquid -->
+<!-- dev_header.liquid -->
 
 <header>
     <nav>
@@ -31,18 +31,13 @@
 
 {% schema %}
 {
-  "name": "Navbar",
+  "name": "Header",
   "class": "shopify-header",
   "settings": [
     {
       "type": "link_list",
       "id": "menu",
       "label": "Menu"
-    }
-  ],
-  "presets": [
-    {
-      "name": "Add Navbar"
     }
   ]
 }
