--- a/sections/carousel--two-rows.liquid
+++ b/sections/carousel--two-rows.liquid
@@ -1,4 +1,4 @@
-{{ 'carousel--two-rows-BEM-methodology.css' | asset_url | stylesheet_tag }}
+{{ 'carousel--two-rows.css' | asset_url | stylesheet_tag }}
 <!-- Carousel Container -->
 <div class="carousel">
   <!-- Carousel Text -->
