--- a/sections/newsletter.liquid
+++ b/sections/newsletter.liquid
@@ -9,11 +9,33 @@
       </div>
       
       <div class="newsletter-form">
-        <form action="{{ 'https://example.com' | within: 'settings' }}" method="post" target="_blank" novalidate class="newsletter-form__form">
-          <input type="email" value="" placeholder="Enter your email to subscribe" name="customer[email]" id="Email" class="input-group-field newsletter-form__input" required />
-          <input type="submit" class="btn newsletter-form__submit">
-        </form>
+        {% form 'customer', class: 'newsletter-form__form' %}
+          <div class="field">
+            <input
+              id="NewsletterForm--{{ section.id }}"
+              type="email"
+              name="contact[email]"
+              class="field__input newsletter-form__input"
+              value="{{ form.email }}"
+              aria-required="true"
+              autocorrect="off"
+              autocapitalize="off"
+              autocomplete="email"
+              placeholder="Email"
+              required
+            >
+            <button
+              type="submit"
+              class="newsletter-form__submit field__button btn"
+              name="commit"
+              id="Subscribe"
+            >
+              Subscribe
+            </button>
+          </div>
+        {% endform %}
       </div>
+      
       <div class="newsletter-condition">
         <br/>
         <h6 class="newsletter-content__condition">{{ section.settings.newsletter_condition }}</h6>
@@ -21,6 +43,7 @@
     </div>
   </div>
 </section>
+
 
 {% schema %}
 {
