--- a/sections/dev_header.liquid
+++ b/sections/dev_header.liquid
@@ -5,9 +5,9 @@
         <span class="navbar-toggler-icon">&#9776;</span>
     </button>
     <div class="logo" id="logo">
-        {{ section.settings.logo | image_url: width: 50 | image_tag: width: 30 }}
-
-        
+        <a href="#"> 
+          {{ section.settings.logo | image_url: width: 50 | image_tag: width: 30 }}
+        </a>
     </div>
     <nav class="navbar" id="navbar">
         <ul class="navbar__nav-list">  
@@ -38,16 +38,13 @@
     </nav>
     <div class="actions">
       {% if section.settings.search == true %}
-        <a href="#"><img src="{{ 'search-icon.png' | asset_url }}" alt="Search Icon" width=20 height=auto loading=lazy /></a>        
-      {% endif %}
-      {% if section.settings.cart == true %}
         <a href="#"> 
-          {% render 'icon-cart' %}
+          {% render 'icon-search' %}
         </a>
       {% endif %}
       {% if section.settings.cart == true %}
         <a href="#"> 
-            {% render 'icon' %}
+            {% render 'icon-cart' %}
         </a>
       {% endif %}
     </div>
