Hamburger icon as svg

--- a/sections/dev_header.liquid
+++ b/sections/dev_header.liquid
@@ -2,7 +2,7 @@
 
 <header class="header">
     <button class="navbar-toggler" onclick="toggleNavbar()">
-        <span class="navbar-toggler-icon">&#9776;</span>
+        <span class="navbar-toggler-icon">{% render 'icon-hamburger' %}</span>
     </button>
     <div class="logo" id="logo">
         <a href="#"> 
