--- a/sections/contact_form.liquid
+++ b/sections/contact_form.liquid
@@ -1,6 +1,6 @@
 {{ 'contact_form.css' | asset_url | stylesheet_tag }}
 
-<section class="contact-section">
+<div class="contact-section">
     <div class="container">
       <div class="contact-wrapper">
         <div class="contact-content">
@@ -67,7 +67,7 @@
       </div>
       </div>
     </div>
-  </section>
+  </div>
   
   
 {% schema %}
