Collapsible Function works when mentioned section in theme.liquid

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -79,6 +79,7 @@
 
     {% section 'announcement-bar' %}
     {% section 'dev_header' %}
+    {% section 'collapsible-content' %}
 
     <main id="MainContent" class="content-for-layout focus-none" role="main">
       {{ content_for_layout }}
