--- a/sections/collapsible-content.liquid
+++ b/sections/collapsible-content.liquid
@@ -4,7 +4,7 @@
   <h2>{{ section.settings.title }}</h2>
 
   {% for block in section.blocks %}
-    <div class="collapsible-item" id="collapse{{ forloop.index }}">
+    <div class="collapsible-item">
       <details>
         <summary>
           {{ block.settings.block_title }}
@@ -18,21 +18,6 @@
     </div>
   {% endfor %}
 </div>
-
-<script>
-
-  document.addEventListener('DOMContentLoaded', function () {
-
-    function collapseButton(index) {
-    console.log("Clicked collapse for block " + index);
-
-    var collapsible = document.getElementById("collapse" + index);
-    collapsible.classList.toggle("active");
-  }
-
-  });
-
-</script>
 
 {% schema %}
 {
